start on push notifications and add ability to select timezone for kiosks

--- a/ui/pantry-ui/src/app/kiosk-page/kiosk-page.component.html
+++ b/ui/pantry-ui/src/app/kiosk-page/kiosk-page.component.html
@@ -549,7 +549,7 @@
             {{ isOnline ? 'ONLINE' : 'OFFLINE' }}
         </span>
 
-        <span class="font-mono text-gray-500">{{ currentDate | date:'MMM d, h:mm a' }}</span>
+        <span class="font-mono text-gray-500">{{ currentDate | date:'MMM d, h:mm a':timezone }}</span>
         <button mat-button class="ml-4 opacity-50 hover:opacity-100" (click)="exitKiosk()">EXIT</button>
     </div>
 
