--- a/ui/pantry-ui/src/app/search/search.component.html
+++ b/ui/pantry-ui/src/app/search/search.component.html
@@ -2,13 +2,14 @@
     <mat-card-header>
         <div class="row justify-content-md-center w-100">
             <div class="col col-md-6">
-                <mat-form-field class="w-100">
-                    <mat-label>Search</mat-label>
-                    <input name="searchbox" class="barcode-input" (keyup.enter)="doSearch()" matInput
-                        [(ngModel)]="searchTerm" />
-                    <button mat-icon-button matSuffix (click)="doSearch()"><mat-icon>search</mat-icon></button>
-                    <mat-hint>Enter your search here</mat-hint>
-                </mat-form-field>
+                <form (ngSubmit)="doSearch()">
+                    <mat-form-field class="w-100">
+                        <mat-label>Search</mat-label>
+                        <input name="searchbox" class="barcode-input" matInput [(ngModel)]="searchTerm" />
+                        <button mat-icon-button matSuffix type="submit"><mat-icon>search</mat-icon></button>
+                        <mat-hint>Enter your search here</mat-hint>
+                    </mat-form-field>
+                </form>
             </div>
         </div>
 
